# sensor_data_sim

./: CMakeLists.txt  LICENSE  README.md
include/: command_interface.hpp  data_logger.hpp  sensor_simulator.hpp
scripts/: automation_script.sh  test_commands.sh
src/: command_interface.cpp  data_logger.cpp  main.cpp  sensor_simulator.cpp
